# ase-client-viewer

./: .gitignore  CMakeLists.txt  README.md  VERSION  build.sh
core/include/viewer/: engine.hpp  types.hpp  version.hpp.in  viewer_module.hpp
core/src/: engine.cpp
include/viewer/: canvas.hpp  file_monitor.hpp  file_tree_columns.hpp  folder_picker.hpp  fs_utils.hpp  header_bar.hpp  keyboard.hpp  preferences.hpp  read_tracker.hpp  settings.hpp  status_bar.hpp  theme.hpp  tree_view.hpp  window.hpp
packaging/: PKGBUILD  ase-viewer.desktop
src/: canvas.cpp  file_monitor.cpp  folder_picker.cpp  fs_utils.cpp  header_bar.cpp  keyboard.cpp  main.cpp  preferences.cpp  read_tracker.cpp  settings.cpp  status_bar.cpp  theme.cpp  tree_view.cpp  vwr_preferences.cpp  vwr_preferences.hpp  vwr_settings.cpp  vwr_settings.hpp  window.cpp
src/render/: vwr_rndr_amdl.cpp  vwr_rndr_amdl.hpp  vwr_rndr_doc.cpp  vwr_rndr_doc.hpp  vwr_rndr_image_path.hpp  vwr_rndr_img.cpp  vwr_rndr_img.hpp  vwr_rndr_inline.cpp  vwr_rndr_inline.hpp  vwr_rndr_math.cpp  vwr_rndr_math.hpp  vwr_rndr_mmrd.cpp  vwr_rndr_mmrd.hpp  vwr_rndr_pntm.cpp  vwr_rndr_pntm.hpp  vwr_rndr_synt.cpp  vwr_rndr_synt.hpp  vwr_rndr_text.cpp  vwr_rndr_text.hpp
src/render/dsl/: vwr_dsl_acrn.cpp  vwr_dsl_acrn.hpp  vwr_dsl_card.cpp  vwr_dsl_card.hpp  vwr_dsl_cols.cpp  vwr_dsl_cols.hpp  vwr_dsl_common.hpp  vwr_dsl_dispatch.cpp  vwr_dsl_dispatch.hpp  vwr_dsl_hero.cpp  vwr_dsl_hero.hpp  vwr_dsl_leaf.cpp  vwr_dsl_leaf.hpp  vwr_dsl_meda.cpp  vwr_dsl_meda.hpp  vwr_dsl_misc.cpp  vwr_dsl_misc.hpp  vwr_dsl_stat.cpp  vwr_dsl_stat.hpp  vwr_dsl_step.cpp  vwr_dsl_step.hpp  vwr_dsl_tabs.cpp  vwr_dsl_tabs.hpp  vwr_dsl_tmln.cpp  vwr_dsl_tmln.hpp
tools/: gen_nerdfont_table.py
tools/plantuml-example/: example.md  example.puml
